Add screen.js file and experiment with prettyjson package for formatting

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@vscode/sqlite3": "^5.0.8",
     "knex": "^1.0.5",
     "pg": "^8.7.3",
+    "prettyjson": "^1.2.5",
     "sqlite3": "^5.0.2"
   }
 }
